# TheBus-StreamDeck-Plugin

./: .gitignore  Cargo.toml  README.en.md  README.md
.github/workflows/: release.yml
assets/: manifest.json
assets/actions/property-inspector/: fixingbrakeinspector.html
src/: action_change.rs  action_fixing_brake.rs  action_fixing_gearselect.rs  action_ignition.rs  action_inbus.rs  action_indicators.rs  action_passenger_doors.rs  action_stop_brake.rs  main.rs
