[package]
name = "thebus-streamdeck-plugin"
version = "1.1.0"
edition = "2024"
rust-version = "1.88"
license = "GPL-3.0"

[dependencies]
tokio = { version = "1.48.0", features = ["rt", "macros", "rt-multi-thread", "time"] }
rusty-patio = { git = "https://github.com/BButner/rusty-patio" }
serde_json = "1"
the-bus-telemetry = "3.0"
komsi="0.5"

[features]
# When set, debug log messages are written in the plugin directory
enabledebuglog = []
